<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UI_TO_PLC" Id="{8453b5d1-510b-416e-86be-55838aea0f30}">
    <Declaration><![CDATA[TYPE UI_TO_PLC :
STRUCT
	EnableAllAxis : BOOL;
	ResetAllAxis : BOOL;
	ConfigKinematicGroup :BOOL;
	ResetKinematicGroup : BOOL;
	XJogPositive : BOOL;
	YJogPositive : BOOL;
	ZJogPositive : BOOL;
	XJogNegative : BOOL;
	YJogNegative : BOOL;
	ZJogNegative : BOOL;
	JogSpeed     : REAL;
	NCIAxisGroup : BOOL;
	NCIAxisUnGroup : BOOL;
	NCIInteperatorReset : BOOL;
	RunPartProgram : BOOL;
	StopPartProgram : BOOL;
	NCIOverRidePer : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>